tests/success/swap.bz
import resource;

function test()
{
	(consteval {
		mut v1 = complex_resource_t();
		mut v2 = complex_resource_t();
		__builtin_swap(v1, v2);
	});
}
